...
                        .putExtra(InlineDemoActivity.EXTRA_FAMILY, family.name)
                        .putExtra(InlineDemoActivity.EXTRA_INFLATED, state.value > 0)
                )
            }
        },
        modifier =
            modifier.testTag(if (viewId == R.id.sample_left) "native_LEFT" else "native_RIGHT"),
    )
}

